<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:hint="@string/roomEt"
        android:inputType="text"
        android:paddingVertical="15dp"
        android:paddingStart="60dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/create"
        android:layout_width="215dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="btnCreate"
        app:layout_constraintBottom_toTopOf="@+id/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/connect"
        android:layout_width="215dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="btnConnect"
        app:layout_constraintBottom_toTopOf="@+id/goToProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToStatistic"
        android:layout_width="215dp"
        android:layout_height="90dp"
        android:layout_marginBottom="108dp"
        android:text="@string/statistic"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="btnGoTStatistic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToProfile"
        android:layout_width="215dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        android:onClick="btnGoToProfile"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/goToStatistic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>